# mosaic

./: .pre-commit-config.yaml  .pre-commit.config.yaml  project_setup.py  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  python-app.yml  sonar-cloud.yml
mosaic/: application.py  config.py  main.py
mosaic/actions/: __init__.py  application.py
mosaic/core/: builder.py  factory.py
mosaic/domain/: tilescene.py
mosaic/utils/: scene_select_tool.py  scene_zoom_tool.py
mosaic/views/: main_window.py
mosaic/widgets/: __init__.py  factory.py  graphics_view.py  inspector.py  main_menu.py  main_window.py  scene_view.py  status_bar.py
scripts/: tests.py
tests/: conftest.py  test_example.py  test_factory.py
tests/core/: test_builder.py  test_factory.py
tests/widgets/: test_factory.py
