[tool.poetry]
name = "mosaic"
version = "0.1.0"
description = ""
authors = ["Johan Rönnkvist <johan.ronnkvist@gmail.com>"]
license = "See LICENSE file"
readme = "README.md"

[tool.poetry.scripts]
run-codecov = "scripts.tests:codecov"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pyside6 = "^6.6.1"
toml = "^0.10.2"
qtawesome = "^1.3.0"
pydantic = "^2.6.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
ruff-lsp = "^0.0.52"
pytest = "^8.0.0"
pre-commit = "^3.6.1"
pytest-cov = "^4.1.0"
pytest-qt = "^4.4.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
